Website Selector functionality #1

--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -5,6 +5,12 @@
   font-weight: bold;
 }
 
+/** Multiselect **/
+
+select[name="ohdear_settings[user_roles_access][]"] {
+  min-height: 150px;
+}
+
 .api-status.connected {
   color: green;
 }
